--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -225,7 +225,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     input[type=password] {font-family:"Tahoma",sans-serif}
     input[type=text],input[type=password],textarea,select {font-size:12px;color:#666;line-height:1.5;border:1px solid #d9d9d9}
     input[type=text],input[type=password],textarea {width:100%;-webkit-appearance:none;border-radius:0}
-    input[type=text],input[type=password] {padding:5px;vertical-align:top}
+    input[type=text],input[type=password] {padding:5px;vertical-align:middle}
     input[type=text]:focus,input[type=password]:focus,textarea:focus {outline:1px solid #1f89ed;border-color:#1f89ed}
     input[type=checkbox], input[type=radio],label {margin:0}
     table input[type=text],table input[type=password],table textarea,table select {padding:6px 5px;font-size:11px}
@@ -255,6 +255,9 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-radio input + i,.ui-radio input + i:after {border-radius:10px}
     .ui-radio input:focus + i {outline:0 none}
     table .ui-check input + i,table .ui-radio input + i {margin-right:0}
+    input[type=text] + .ui-check,input[type=text] + .ui-radio,input[type=text] + .check-group,input[type=text] + .check-group-inline,
+    input[type=password] + .ui-check,input[type=password] + .ui-radio,input[type=password] + .check-group,input[type=password] + .check-group-inline
+    {margin-left:5px;}
 
     .ui-radio.disabled,.ui-check.disabled {opacity:.5}
 
@@ -358,7 +361,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .pagination {display: inline-block;border-radius: 4px}
     .pagination > li {display: inline}
     .pagination>li>a,.pagination>li>span {
-        position: relative;float: left;padding: 6px 12px;margin-left: -1px;font-size:14px;line-height: 1.42857143;color: #337ab7;
+        position: relative;float: left;padding: 6px 12px;margin-left: -1px;font-size:12px;line-height: 1.33333333;color: #337ab7;
         text-decoration: none;background-color: #fff;border: 1px solid #ddd
     }
     .pagination>li:first-child>a,.pagination>li:first-child>span {margin-left: 0;border-top-left-radius: 4px;border-bottom-left-radius: 4px}
@@ -531,6 +534,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .save-edit-content {position:fixed;right:15px;top:95px;z-index:10;padding-top:20px}
     .edit-tabs .ui-tabs-nav li:first-child {margin-left:15px !important}
     .edit-row {height:100%;padding-top:150px}
+    .edit-row-normal {height:100%;padding-top:50px}
     .edit-row-scroll {overflow:auto;height:100%;padding:0 15px 15px}
     .edit-form {font-size:12px}
     .edit-form .edit-form-row:first-child {margin-top:0}
@@ -570,10 +574,12 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .add-thumb:before {content:'';display:inline-block;width:14px;height:14px;margin-right:10px;vertical-align:middle;background-position:100% 100%}
     .ui-form-time {padding-left:3px;text-align:center}
     .ui-form-time input {width:43%;text-align:center}
-    .ui-form-time i {display:inline-block;line-height:30px;width:14%}
+    .ui-form-time i {display:inline-block;vertical-align:middle;line-height:30px;width:14%}
 
     /* 주문수정 */
     .fix-btn-group {overflow:hidden;padding:15px 30px 5px 15px}
+    .fix-btn-group .pop-title {font-size:22px;font-weight:normal;line-height:1.363636;color:#555}
+    .edit-row-normal .fix-btn-group {top:0}
     .fix-btn-group-l {float:left}
     .fix-btn-group-r {float:right;text-align:right}
     .edit-order-control > span {
