--- a/ec/resource/css/ui-template.css
+++ b/ec/resource/css/ui-template.css
@@ -1,6 +1,6 @@
 /* Scroll Table */
     .ui-scroll-table {position:relative;overflow:hidden;margin-top:25px;border-top:1px solid #dedede;border-bottom:1px solid #dedede}
-    .table-info-group + .ui-scroll-table {margin-top:0}
+    .table-info-group + .ui-scroll-table,.dropdown-box + .ui-scroll-table {margin-top:0}
     .ui-scroll-table-header {overflow:hidden;position:absolute;left:0;top:0;width:100%}
     .ui-scroll-table-header ul {display:table;width:100%;table-layout: fixed}
     .ui-scroll-table-header ul.over {padding-right:17px}
