--- a/ec/resource/css/ui-template.css
+++ b/ec/resource/css/ui-template.css
@@ -78,3 +78,20 @@
     .ui-scroll-content::-webkit-scrollbar-thumb:active,.pannel-wrap::-webkit-scrollbar-thumb:active {
       background: linear-gradient(left, #22ADD4, #1E98BA);
     }
+
+    /* ui-select */
+    .ui-select {display:inline-block;position:relative;z-index:100;vertical-align:top}
+    .ui-select-toggle {width:100%;padding-right:25px;padding-left:5px;text-align:left;background: #fff url('/ec/resource/images/bg_select_arr.png') no-repeat 100% 50%}
+    .ui-select-toggle:hover {border-color:#ccc;background-color:#fff}
+    .ui-select-list {display:none;position:absolute;left:0;top:32px;z-index:10;min-width:100%;white-space:nowrap;border:1px solid #ccc;background:#fff;box-shadow:0 4px 6px 0 rgba(32,33,36,.28)}
+    .ui-select-list.pos-top {top:auto;bottom:32px}
+    .ui-select-list ul {overflow:auto;max-height:150px;margin-bottom:0;}
+    .ui-select-list ul li:hover {background:#c5e3ff}
+    .ui-select-btn {padding:5px 10px;background:#efefef}
+    .ui-select-list .ui-check {display:block;margin:0;padding:5px 8px 5px 5px}
+    .btn-close-icon {top:5px;right:10px}
+    .ui-select-result {display:none;overflow:hidden;margin:5px 0}
+    .ui-select-result > span {float:left;margin:3px;padding:1px 5px 1px 5px;font-size:12px;color:#777;border-radius:10px;background:#ced7e8;cursor:pointer;opacity:.5}
+    .ui-select-result > span:after {content:'x';padding-left:10px}
+    .ui-select-result > span:hover {opacity:1}
+    .ui-select.active .ui-select-list {display:block}
