--- a/ec/resource/css/lib/jquery-ui.edit.css
+++ b/ec/resource/css/lib/jquery-ui.edit.css
@@ -3,7 +3,7 @@
     .ui-date input {width:calc(100% - 33px);margin-right:3px;text-align:center;vertical-align:middle}
 
     /* jquery UI overwrite */
-    .ui-datepicker {width:250px;margin-top:5px;padding:0;font-size:12px;border:1px solid #cacaca;background:#fff}
+    .ui-datepicker {width:250px;margin-top:5px;padding:0;font-size:12px;border:1px solid #cacaca;background:#fff;z-index:1000 !important}
     .ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year {width:65px;margin:0 5px}
     .ui-datepicker .ui-datepicker-header {padding:10px}
     .ui-datepicker .ui-datepicker-header:after {display:none}
@@ -22,7 +22,7 @@
     .ui-datepicker td a {display:block;height:100%;line-height:23px;text-align:center}
     .ui-datepicker .ui-datepicker-buttonpane {overflow:hidden;border-top:1px solid #cacaca;background-color:#f5f5f5}
     .ui-datepicker .ui-datepicker-buttonpane > button {background-color:#fff}
-    
+
 /* Dialog */
     .ui-dialog {position:fixed;padding:2px;background:#fff}
     .pos-re {position:relative;left:0 !important;top:0 !important}
@@ -37,7 +37,7 @@
         display:inline-block;height:30px;margin:0 2px;padding:5px 10px;font-size:12px;font-weight:400;line-height:1.5;color:#333;
         text-align:center;white-space:nowrap;vertical-align:middle;cursor:pointer;border:1px solid #ccc;
         background:#fff none;outline:0
-    }    
+    }
     .ui-dialog .ui-dialog-buttonpane button.btn-blue {border-color:#1e50ad;background-color:#2c62c8}
     .ui-dialog .ui-dialog-buttonpane button.btn-blue:hover {border-color:#0d2b64;background-color:#17469d}
     .ui-widget-overlay {background:#222;opacity:.6}
