--- a/ec/resource/css/lib/jquery-ui.edit.css
+++ b/ec/resource/css/lib/jquery-ui.edit.css
@@ -1,5 +1,6 @@
 /* Datepicker */
     .ui-date {width:133px;display:inline-block}
+    .ui-date[picker="time"] {width:163px}
     .ui-date input {width:calc(100% - 33px);margin-right:3px;text-align:center;vertical-align:middle}
 
     /* jquery UI overwrite */
@@ -22,6 +23,20 @@
     .ui-datepicker td a {display:block;height:100%;line-height:23px;text-align:center}
     .ui-datepicker .ui-datepicker-buttonpane {overflow:hidden;border-top:1px solid #cacaca;background-color:#f5f5f5}
     .ui-datepicker .ui-datepicker-buttonpane > button {background-color:#fff}
+
+    /* jquery UI TimePicker */
+    .ui-timepicker-div {width:96%;margin:10px auto}
+    .ui-timepicker-div dl {margin-bottom:10px}
+    .ui-timepicker-div dl:after {content:'';display:table;clear:both}
+    .ui-timepicker-div dl dt,.ui-timepicker-div dl dd {margin:5px 0}
+    .ui-timepicker-div dl dt {width:70px;font-weight:normal}
+    .ui-timepicker-div dl dd {width:calc(100% - 90px);float:right}
+    .ui-widget .ui-widget {position:relative;height:6px;margin-right:14px;background:#3769be}
+    .ui-widget .ui-widget:before {content:'';position:absolute;right:-13px;top:0;height:6px;width:50%;background:#3769be}
+    .ui-timepicker-div .ui_tpicker_time .ui_tpicker_time_input {width:100%;color:#2b2b2b;text-align:center;border-bottom-color:#c5c5c5}
+    .ui-slider-horizontal .ui-slider-handle {margin-left:0}
+    .ui-slider-horizontal .ui-slider-handle.ui-state-default {background:#fff}
+    .ui-slider-horizontal .ui-slider-handle.ui-state-active {border:1px solid #3769be;border-bottom-color:#3769be !important;background:#4bc6ff}
 
 /* Dialog */
     .ui-dialog {position:fixed;padding:2px;background:#fff}
